# pygame_app

./: .gitignore  README.md  pyproject.toml  setup.cfg
examples/ex1/: main.py
examples/ex2/: main.py
gameapp/: __init__.py  defaults.py  engine.py  object.py  world.py
pygame_app/: __init__.py  engine.py  object.py  utils.py  world.py
tests/: test_engine.py
